--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@
     height: 50px;
 }
 
+.height-100{
+    height: 100px;
+}
+
 .margin-top-10{
     margin-top: 10px;
 }
@@ -33,3 +37,43 @@
 .padding-10{
     padding: 10px;
 }
+
+
+/* justify content */
+
+.center{
+    justify-content: center;
+}
+
+.content-end{
+    justify-content: flex-end;
+}
+
+.space-around{
+    justify-content: space-around;
+}
+
+.space-between{
+    justify-content: space-between;
+}
+
+
+
+
+
+
+
+
+
+/* align-items */
+
+
+.middle{
+    align-items: center;
+}
+
+.align-end{
+    align-items: flex-end;
+}
+
+
