--- a/12bool.css
+++ b/12bool.css
@@ -1,5 +1,5 @@
 .container{
-    max-width: (1170px);
+    max-width: 1170px;
     margin: 0 auto;
 }
 
@@ -12,6 +12,41 @@
 [class*="col-"]{
     flex: 0 0 auto;
 }
+
+
+/* justify content */
+
+.center{
+    justify-content: center;
+}
+
+.content-end{
+    justify-content: flex-end;
+}
+
+.space-around{
+    justify-content: space-around;
+}
+
+.space-between{
+    justify-content: space-between;
+}
+
+
+/* align-items */
+
+
+.middle{
+    align-items: center;
+}
+
+.align-end{
+    align-items: flex-end;
+}
+
+
+
+
 
 /* col-standard */
 
@@ -77,9 +112,7 @@
 
 
 
-
-/* offset */
-
+/* col offset */
 
 .col-offset-1{
     margin-left: calc((100% / 12) * 1);
@@ -125,6 +158,360 @@
     margin-left: calc((100% / 12) * 11);
 }
 
+
+
+
+
+/* media queries */
+
+
+/* media queries small sm */
+
+@media all and (min-width: 576px){
+
+    .col-sm-1{
+        flex-basis: calc((100% / 12) * 1);
+        max-width:  calc((100% / 12) * 1);
+    }
+    
+    .col-sm-2{
+        flex-basis: calc((100% / 12) * 2);
+        max-width: calc((100% / 12) * 2);
+    }
+    
+    .col-sm-3{
+        flex-basis: calc((100% / 12) * 3);
+        max-width: calc((100% / 12) * 3);
+    }
+    
+    .col-sm-4{
+        flex-basis: calc((100% / 12) * 4);
+        max-width: calc((100% / 12) * 4);
+    }
+    
+    .col-sm-5{
+        flex-basis: calc((100% / 12) * 5);
+        max-width: calc((100% / 12) * 5);
+    }
+    
+    .col-sm-6{
+        flex-basis: calc((100% / 12) * 6);
+        max-width: calc((100% / 12) * 6);
+    }
+    
+    .col-sm-7{
+        flex-basis: calc((100% / 12) * 7);
+        max-width: calc((100% / 12) * 7);
+    }
+    
+    .col-sm-8{
+        flex-basis: calc((100% / 12) * 8);
+        max-width: calc((100% / 12) * 8);
+    }
+    
+    .col-sm-9{
+        flex-basis: calc((100% / 12) * 9);
+        max-width: calc((100% / 12) * 9);
+    }
+    
+    .col-sm-10{
+        flex-basis: calc((100% / 12) * 10);
+        max-width: calc((100% / 12) * 10);
+    }
+    
+    .col-sm-11{
+        flex-basis: calc((100% / 12) * 11);
+        max-width: calc((100% / 12) * 11);
+    }
+    
+    .col-sm-12{
+        flex-basis: calc((100% / 12) * 12);
+        max-width: calc((100% / 12) * 12);
+    }
+
+
+/* offset sm */
+
+    .col-sm-offset-1{
+        margin-left: calc((100% / 12) * 1);
+    }
+    
+    .col-sm-offset-2{
+        margin-left: calc((100% / 12) * 2);
+    }
+    
+    .col-sm-offset-3{
+        margin-left: calc((100% / 12) * 3);
+    }
+    
+    .col-sm-offset-4{
+        margin-left: calc((100% / 12) * 4);
+    }
+    
+    .col-sm-offset-5{
+        margin-left: calc((100% / 12) * 5);
+    }
+    
+    .col-sm-offset-6{
+        margin-left: calc((100% / 12) * 6);
+    }
+    
+    .col-sm-offset-7{
+        margin-left: calc((100% / 12) * 7);
+    }
+    
+    .col-sm-offset-8{
+        margin-left: calc((100% / 12) * 8);
+    }
+    
+    .col-sm-offset-9{
+        margin-left: calc((100% / 12) * 9);
+    }
+    
+    .col-sm-offset-10{
+        margin-left: calc((100% / 12) * 10);
+    }
+    
+    .col-sm-offset-11{
+        margin-left: calc((100% / 12) * 11);
+    }
+    
+
+}
+
+
+
+
+/* media queries medium md */
+
+@media all and (min-width: 768px){
+
+    .col-md-1{
+        flex-basis: calc((100% / 12) * 1);
+        max-width:  calc((100% / 12) * 1);
+    }
+    
+    .col-md-2{
+        flex-basis: calc((100% / 12) * 2);
+        max-width: calc((100% / 12) * 2);
+    }
+    
+    .col-md-3{
+        flex-basis: calc((100% / 12) * 3);
+        max-width: calc((100% / 12) * 3);
+    }
+    
+    .col-md-4{
+        flex-basis: calc((100% / 12) * 4);
+        max-width: calc((100% / 12) * 4);
+    }
+    
+    .col-md-5{
+        flex-basis: calc((100% / 12) * 5);
+        max-width: calc((100% / 12) * 5);
+    }
+    
+    .col-md-6{
+        flex-basis: calc((100% / 12) * 6);
+        max-width: calc((100% / 12) * 6);
+    }
+    
+    .col-md-7{
+        flex-basis: calc((100% / 12) * 7);
+        max-width: calc((100% / 12) * 7);
+    }
+    
+    .col-md-8{
+        flex-basis: calc((100% / 12) * 8);
+        max-width: calc((100% / 12) * 8);
+    }
+    
+    .col-md-9{
+        flex-basis: calc((100% / 12) * 9);
+        max-width: calc((100% / 12) * 9);
+    }
+    
+    .col-md-10{
+        flex-basis: calc((100% / 12) * 10);
+        max-width: calc((100% / 12) * 10);
+    }
+    
+    .col-md-11{
+        flex-basis: calc((100% / 12) * 11);
+        max-width: calc((100% / 12) * 11);
+    }
+    
+    .col-md-12{
+        flex-basis: calc((100% / 12) * 12);
+        max-width: calc((100% / 12) * 12);
+    }
+
+
+
+/* offset md */
+
+    .col-md-offset-1{
+        margin-left: calc((100% / 12) * 1);
+    }
+    
+    .col-md-offset-2{
+        margin-left: calc((100% / 12) * 2);
+    }
+    
+    .col-md-offset-3{
+        margin-left: calc((100% / 12) * 3);
+    }
+    
+    .col-md-offset-4{
+        margin-left: calc((100% / 12) * 4);
+    }
+    
+    .col-md-offset-5{
+        margin-left: calc((100% / 12) * 5);
+    }
+    
+    .col-md-offset-6{
+        margin-left: calc((100% / 12) * 6);
+    }
+    
+    .col-md-offset-7{
+        margin-left: calc((100% / 12) * 7);
+    }
+    
+    .col-md-offset-8{
+        margin-left: calc((100% / 12) * 8);
+    }
+    
+    .col-md-offset-9{
+        margin-left: calc((100% / 12) * 9);
+    }
+    
+    .col-md-offset-10{
+        margin-left: calc((100% / 12) * 10);
+    }
+    
+    .col-md-offset-11{
+        margin-left: calc((100% / 12) * 11);
+    }
+}
+
+
+
+
+/* media queries large lg */
+
+@media all and (min-width: 992px){
+
+    .col-lg-1{
+        flex-basis: calc((100% / 12) * 1);
+        max-width:  calc((100% / 12) * 1);
+    }
+    
+    .col-lg-2{
+        flex-basis: calc((100% / 12) * 2);
+        max-width: calc((100% / 12) * 2);
+    }
+    
+    .col-lg-3{
+        flex-basis: calc((100% / 12) * 3);
+        max-width: calc((100% / 12) * 3);
+    }
+    
+    .col-lg-4{
+        flex-basis: calc((100% / 12) * 4);
+        max-width: calc((100% / 12) * 4);
+    }
+    
+    .col-lg-5{
+        flex-basis: calc((100% / 12) * 5);
+        max-width: calc((100% / 12) * 5);
+    }
+    
+    .col-lg-6{
+        flex-basis: calc((100% / 12) * 6);
+        max-width: calc((100% / 12) * 6);
+    }
+    
+    .col-lg-7{
+        flex-basis: calc((100% / 12) * 7);
+        max-width: calc((100% / 12) * 7);
+    }
+    
+    .col-lg-8{
+        flex-basis: calc((100% / 12) * 8);
+        max-width: calc((100% / 12) * 8);
+    }
+    
+    .col-lg-9{
+        flex-basis: calc((100% / 12) * 9);
+        max-width: calc((100% / 12) * 9);
+    }
+    
+    .col-lg-10{
+        flex-basis: calc((100% / 12) * 10);
+        max-width: calc((100% / 12) * 10);
+    }
+    
+    .col-lg-11{
+        flex-basis: calc((100% / 12) * 11);
+        max-width: calc((100% / 12) * 11);
+    }
+    
+    .col-lg-12{
+        flex-basis: calc((100% / 12) * 12);
+        max-width: calc((100% / 12) * 12);
+    }
+
+
+
+
+/* offset lg */
+
+    .col-lg-offset-1{
+        margin-left: calc((100% / 12) * 1);
+    }
+    
+    .col-lg-offset-2{
+        margin-left: calc((100% / 12) * 2);
+    }
+    
+    .col-lg-offset-3{
+        margin-left: calc((100% / 12) * 3);
+    }
+    
+    .col-lg-offset-4{
+        margin-left: calc((100% / 12) * 4);
+    }
+    
+    .col-lg-offset-5{
+        margin-left: calc((100% / 12) * 5);
+    }
+    
+    .col-lg-offset-6{
+        margin-left: calc((100% / 12) * 6);
+    }
+    
+    .col-lg-offset-7{
+        margin-left: calc((100% / 12) * 7);
+    }
+    
+    .col-lg-offset-8{
+        margin-left: calc((100% / 12) * 8);
+    }
+    
+    .col-lg-offset-9{
+        margin-left: calc((100% / 12) * 9);
+    }
+    
+    .col-lg-offset-10{
+        margin-left: calc((100% / 12) * 10);
+    }
+    
+    .col-lg-offset-11{
+        margin-left: calc((100% / 12) * 11);
+    }
+
+}
 
 
 
